Change scss for header and font-page style

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -1,3 +1,25 @@
+// Header
+.button {
+    color: #000;
+}
+
+
+// Front Page
+.slider {
+    max-width: 600px;
+}
+.news {
+    ul {
+        list-style-type: none;
+        line-height: 3.5em;
+    }
+}
+.servers {
+    div {
+        text-align: center;
+    }
+}
+
 // Post
 article {
 
