--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -12,7 +12,7 @@ $totalColumns: 12;
 
 // Colors Settings
 
-// $mainColor: #2ba6cb;
+$mainColor: #FCCF51;
 // $secondaryColor: #e9e9e9;
 // $alertColor: #c60f13;
 // $successColor: #5da423;
@@ -95,7 +95,7 @@ $totalColumns: 12;
 
 // Top Bar Settings
 
-// $topBarBgColor: #222;
+$topBarBgColor: #494949;
 $topBarHeight: 68px;
 // $topBarHeightMobile: 45px;
 // $topBarBtmMargin: 30px;
