--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -12,7 +12,7 @@ $totalColumns: 12;
 
 // Colors Settings
 
-$mainColor: #FCCF51;
+// $mainColor: #FCCF51;
 // $secondaryColor: #e9e9e9;
 // $alertColor: #c60f13;
 // $successColor: #5da423;
